--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.0.9
   email_validator: ^2.0.1
   emoji_picker_flutter: ^1.3.0
+  socket_io_client: ^2.0.0
   # emoji_picker_flutter: ^1.3.0
 
 dev_dependencies:
