--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   email_validator: ^2.0.1
   emoji_picker_flutter: ^1.3.0
   socket_io_client: ^2.0.0
+  intl: ^0.17.0
   # emoji_picker_flutter: ^1.3.0
 
 dev_dependencies:
